# OOP-First-Task

./: .gitignore  Application.cpp  Benchmark.h  CMakeLists.txt  Doxyfile  Human.h  README.md  Student.cpp  Student.h  main.cpp
docs/: _application_8h_source.html  _benchmark_8h_source.html  _faker_8h_source.html  _human_8h_source.html  _student_8h_source.html  annotated.html  class_application-members.html  class_application.html  class_benchmark-members.html  class_benchmark.html  class_faker-members.html  class_faker.html  class_human-members.html  class_human.html  class_student-members.html  class_student.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html  struct_benchmark_result-members.html  struct_benchmark_result.html
docs/search/: all_1.js  classes_2.js  pages_0.js  searchdata.js
src/: Application.h  CMakeLists.txt  Faker.h  Human.cpp  Human.h  Student.cpp  Student.h
tests/: CMakeLists.txt  human_test.cpp  student_test.cpp
